# wx-multiple

./: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  微信双开.bat
.claude/plan/: 微信多开软件.md
.github/workflows/: build.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
